Pulled site-specific stuff out of many files, templates, partials, and so on.

--- a/templates/includes/belt.hbs
+++ b/templates/includes/belt.hbs
@@ -1,7 +1,7 @@
 <div class="belt">
   <div class="container">
     <strong>
-      Need help? Visit the <a href="{{site.url.bugs}}">Issues on GitHub</a> or visit the <a href="http://assemble.io/docs">Assemble docs</a> to learn more!
+      Need help? Visit the <a href="{{site.url.bugs}}">Issues on GitHub</a>. This is the belt. Edit in templates/includes/belt.hbs.
     </strong>
   </div>
 </div>
