--- a/templates/includes/footer.hbs
+++ b/templates/includes/footer.hbs
@@ -8,7 +8,7 @@
 			</p>
 
 			<p>
-				<a href="https://github.com/Scale-Out-Agile/Scale-Out-Agile.github.io/" target="_blank">Scale-Out Agile</a> was created by <a href="https://twitter.com/arlobelshee" target="_blank">Arlo Belshee</a>.
+				<a href="{{ site.url.repo }}" target="_blank">{{ site.title }}</a> was created by <a href="https://twitter.com/{{ site.social.twitter.username }}" target="_blank">{{ site.social.twitter.username }}</a>.
 			</p>
 			<p>
 				Source code released under the <a href="{{ site.license.url }}" target="_blank">{{ site.license.type }}</a> license, documentation under <a href="{{ site.content_license.url }}">{{ site.content_license.type }}</a>.
