--- a/templates/includes/nav-main.hbs
+++ b/templates/includes/nav-main.hbs
@@ -4,7 +4,7 @@
       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
       </button>
-      <a href='{{relative page.dest "_gh_pages/index.html"}}' class="navbar-brand">{{default site.title 'Scale-Out'}}</a>
+      <a href='{{relative page.dest "_gh_pages/index.html"}}' class="navbar-brand">{{default site.title 'Home'}}</a>
     </div>
     <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
