--- a/templates/layouts/index.hbs
+++ b/templates/layouts/index.hbs
@@ -2,12 +2,11 @@
 layout: default.hbs
 ---
 
-<!-- Header -->
 <div class="bs-docs-section">
   <div class="page-header">
-    <h1 id="welcome">Welcome!  {{> popover popover.anchors }}</h1>
+    <h1 id="welcome">Index  {{> popover popover.anchors }}</h1>
   </div>
-  <p class="lead">{{site.description}}</p>
+  <p class="lead">This comes from the template templates/layouts/index.html. This template is used only for the index, so your index can use a different design from the rest of your site.</p>
   
 {{#markdown}}
 {{> body }}
