--- a/templates/readme.hbs
+++ b/templates/readme.hbs
@@ -3,4 +3,6 @@ title: Readme
 description: Details about contributing to the project
 ---
 
+<p>This page is slightly funny. It uses Handlebars source instead of markdown: templates/readme.hbs. That file just includes the project readme file.
+
 {{md 'README.md'}}
