Fix some URLs in the footer.

--- a/templates/includes/footer.hbs
+++ b/templates/includes/footer.hbs
@@ -19,7 +19,7 @@
 				<!--      <li><a href="{{ site.url.blog }}">Blog</a></li>
 		<li class="muted">&middot;</li> -->
 				<li>
-					<a href="{{ site.url.bugs }}/issues?state=open">Issues</a>
+					<a href="{{ site.url.bugs }}">Issues</a>
 				</li>
 				<li class="muted">&middot;</li>
 				<li>
