Set various header and nav stuff in the right places.

--- a/theme/components/main-nav.less
+++ b/theme/components/main-nav.less
@@ -4,6 +4,7 @@
  * Turn the `.navbar` at the top of the docs purple.
  */
 
+/* Left a an example of nav bar custmization. The result is not pretty, but is dramatic.
 .bs-docs-nav {
   text-shadow: 0 -1px 0 rgba(0,0,0,.15);
   background-color: #563d7c;
@@ -34,3 +35,4 @@
   background-color: #463265;
   border-color: #463265;
 }
+*/
