--- a/templates/includes/subhead.hbs
+++ b/templates/includes/subhead.hbs
@@ -1,4 +1,4 @@
-<div class="bs-header" id="content" style="border:px dotted blue;position:relative;">
+<div class="bs-header" style="position:relative;">
   <div class="container">
   <div style='border:1px solid blue;position:absolute;top:-1em;left:3em;'>This is the Subhead. Edit in templates/includes/subhead.hbs.</div>
     <h1>{{title}}</h1>
