--- a/templates/layouts/default.hbs
+++ b/templates/layouts/default.hbs
@@ -17,7 +17,7 @@
 	{{> belt }}
 
 	<!-- Main content -->
-	<div class="container bs-docs-container">
+	<div class="container bs-docs-container" id="content">
 		<div class="wordcount">
 			<span class="label-wordcount">&nbsp;words</span>,
 			<span class="label-reading-time">&nbsp;to read</span>
