--- a/templates/includes/head.hbs
+++ b/templates/includes/head.hbs
@@ -1,4 +1,4 @@
-<meta charset="utf-8">
+﻿<meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="{{default description site.description}}">
@@ -9,10 +9,6 @@
 
 <!-- Stylesheets -->
 <link rel="stylesheet" href="{{assets}}/css/site.css">
-<link rel="stylesheet" href="{{assets}}/css/github.css">
-
-<!-- Webfonts -->
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,300,600,700">
 
 <!--[if lt IE 9]>
   <script src="{{ assets }}/js/ie8-responsive-file-warning.js"></script>
