--- a/templates/includes/head.hbs
+++ b/templates/includes/head.hbs
@@ -9,6 +9,7 @@
 
 <!-- Stylesheets -->
 <link rel="stylesheet" href="{{assets}}/css/site.css">
+<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/default.min.css">
 
 <!--[if lt IE 9]>
   <script src="{{ assets }}/js/ie8-responsive-file-warning.js"></script>
