--- a/theme/components/main-nav.less
+++ b/theme/components/main-nav.less
@@ -1,38 +1,17 @@
 /*
  * Main navigation
  *
- * Turn the `.navbar` at the top of the docs purple.
  */
 
-/* Left a an example of nav bar custmization. The result is not pretty, but is dramatic.
-.bs-docs-nav {
-  text-shadow: 0 -1px 0 rgba(0,0,0,.15);
-  background-color: #563d7c;
-  border-color: #463265;
-  box-shadow: 0 1px 0 rgba(255,255,255,.1);
+.affix {
+	top: 0;
+	width: 100%;
 }
-.bs-docs-nav .navbar-collapse {
-  border-color: #463265;
+
+.navbar-nav {
+	@media (min-width: @grid-float-breakpoint) {
+		&.navbar-right:last-child {
+			margin-right: 0;
+		}
+	}
 }
-.bs-docs-nav .navbar-brand {
-  color: #fff;
-}
-.bs-docs-nav .navbar-nav > li > a {
-  color: #cdbfe3;
-}
-.bs-docs-nav .navbar-nav > li > a:hover {
-  color: #fff;
-}
-.bs-docs-nav .navbar-nav > .active > a,
-.bs-docs-nav .navbar-nav > .active > a:hover {
-  color: #fff;
-  background-color: #463265;
-}
-.bs-docs-nav .navbar-toggle {
-  border-color: #563d7c;
-}
-.bs-docs-nav .navbar-toggle:hover {
-  background-color: #463265;
-  border-color: #463265;
-}
-*/
