Push the wordcount display to the right & drop the popover. Wanted it a bit more subtle. Useful, but not key in the eye flow line.

--- a/templates/layouts/default.hbs
+++ b/templates/layouts/default.hbs
@@ -19,9 +19,10 @@
 	<!-- Main content -->
 	<div class="container bs-docs-container" id="content">
 		<div class="wordcount">
-			<span class="label-wordcount">&nbsp;words</span>,
-			<span class="label-reading-time">&nbsp;to read</span>
-			{{> popover popover.wordcount }}
+			<div class="wordcount-display">
+				<span class="label-wordcount">&nbsp;words</span>,
+				<span class="label-reading-time">&nbsp;to read</span>
+			</div>
 			{{> body }}
 		</div>
 	</div>
