--- a/theme/site.less
+++ b/theme/site.less
@@ -37,6 +37,7 @@
 @import "team.less";
 @import "belt.less";
 @import "toc.less";
+@import "wordcount.less";
 
 // For the examples page so you can see how every component will be styled.
 // Delete once you drop that page.
