Perform cache busting on the site.css.

--- a/templates/includes/head.hbs
+++ b/templates/includes/head.hbs
@@ -8,7 +8,7 @@
 </title>
 
 <!-- Stylesheets -->
-<link rel="stylesheet" href="{{assets}}/css/site.css">
+<link rel="stylesheet" href="{{assets}}/css/site.{{cache_bust}}.css">
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/default.min.css">
 
 <!--[if lt IE 9]>
